# ze-ri

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  source_zeri.sh  source_zeri_nbytics.sh  source_zeri_vlm.sh
.venv-handoff/: pyvenv.cfg
NBYtics/: dashboard_app.py  frames_2026-05-13_14.26.34.gv  frames_2026-05-13_14.31.45.gv  requirements_before_ort_gpu.txt  requirements_before_ort_source_build.txt  source_nbytics.sh
NBYtics/dashboard/: depth_viz_node.py  robot_dashboard_v3.html  start_dashboard_all.sh
NBYtics/maps/: nb_map_test.yaml
NBYtics/slam_config/: mapper_params_online_async.yaml  mapper_params_online_async_scan.yaml
NBYtics/src/nb_base_bridge/: package.xml  setup.cfg  setup.py
NBYtics/src/nb_odom/: package.xml  setup.cfg
NBYtics/src/nb_voice_stt/: package.xml
NBYtics/src/nb_voice_stt/launch/: full_system.launch.py
NBYtics/src/nb_voice_stt/nb_voice_stt/: audio_io.py  cmd_serial_bridge.py  lidar_guard_node.py  stt_engine.py  stt_node.py  voice_mode_manager.py
NBYtics/src/rf2o_laser_odometry/: package.xml
NBYtics/src/ydlidar_ros2_driver/: package.xml
NBYtics/src/ydlidar_ros2_driver/params/: X2.yaml  ydlidar.yaml
NBYtics/tools/: cmd_odom_serial_bridge.py  keyboard_stop.py  scan_front_filter.py
YDLidar-SDK/: CMakeLists.txt
config/: left_vla_policy_manifest.json  right_vla_policy_manifest.json  vla_route_manifest.json
config/vla/: bimanual_vla_policy_manifest.json  bimanual_vla_route_manifest.json  handoff_reference_manifest.json  left_vla_policy_manifest.json  right_vla_policy_manifest.json  vla_route_manifest.json
configs/maps/: nb_map_test.pgm
configs/nav2/: zeri_nav2_params.yaml
configs/slam/: mapper_params_online_async.yaml
dashboard/: dashboard_server copy.py  dashboard_server.py  dashboard_server.py.bak.camera_layout
debug/yolo_handoff/: 20260604_193615_result.json  20260604_193629_result.json  20260604_193729_result.json  20260604_195928_result.json
docs/: README.md
install/: local_setup.sh  setup.sh
log/: latest_build
models/: hand_yolo.pt
policies/: so101_calibrated_home_from_raw.json  so101_home_pose.json  so101_start_raw_ticks_left.json  so101_start_raw_ticks_right.json  xvla_manifest.json
requirements/: zeri_current_freeze_raw.txt  zeri_manual_build_notes.md  zeri_xvla_thor_runtime.txt
ros2_ws/mobile_base/: mobile_base.ino
ros2_ws/mobile_base/mobile_base/: mobile_base.ino
ros2_ws/mobile_base/mobile_base_velocity/: mobile_base_velocity.ino
ros2_ws/src/nb_odom/: setup.py
ros2_ws/src/nb_voice_stt/: package.xml  setup.cfg  setup.py
ros2_ws/src/nb_voice_stt/launch/: full_system.launch.py  stt.launch.py
ros2_ws/src/nb_voice_stt/nb_voice_stt/: stt_engine.py  stt_node.py  stt_node.py.bak
ros2_ws/src/zeri_base/: package.xml  setup.cfg  setup.py
ros2_ws/src/zeri_base/zeri_base/: base_key_odom_serial_node.py  base_velocity_odom_serial_node.py  cmd_vel_key_serial_node.py  cmd_vel_safety_node.py  cmd_vel_serial_node.py
ros2_ws/src/zeri_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/zeri_camera/: package.xml  setup.cfg  setup.py
ros2_ws/src/zeri_lidar/: package.xml  setup.cfg  setup.py
ros2_ws/src/zeri_lidar/zeri_lidar/: lidar_depth_guard_node.py  scan_front_filter_node.py
ros2_ws/src/zeri_slam/: package.xml  setup.cfg  setup.py
ros2_ws/src/zeri_voice/: package.xml  setup.cfg  setup.py
ros2_ws/src/zeri_voice/zeri_voice/: respeaker_vad_doa_node.py  sensevoice_stt_node.py  voice_follow_cmd_node.py  voice_stop_guard_node.py
scripts/: camera_rgbd.sh  camera_rgbd_pointcloud.sh  camera_voice_follow_drive.sh  capture_yolo_handoff_frame.py  check_serial_live.sh  extract_vla_handoff_reference.py  find_local_absolute_paths.sh  keyboard_serial_drive.py  keyboard_serial_hold_drive.py  person_follow_depth_lidar_drive.sh  person_follow_depth_lidar_drive_zeri_topics.sh  person_follower_depth_lidar_drive.sh  realsense_pointcloud.sh  run_mediapipe_handoff_left.sh  slam.sh  slam_depth_drive.sh  source_zeri_ros.sh  start_hri.sh  start_vla.sh  start_vla_handoff.sh  start_vla_yolo_handoff.sh  start_zeri_demo_all.sh  voice_direction_drive.sh  voice_follow_drive.sh  yolo_person_follow_drive.sh  yolo_person_nav_drive.sh
src/lerobot/async_inference/: configs.py  constants.py  helpers.py  policy_server.py  robot_client.py  robot_client_bimanual_ros_multi_gate.py  robot_client_ros_multi_gate.py  robot_client_ros_multi_gate_raw_home.py  robot_client_ros_multi_gate_raw_home_handoff.py
src/lerobot/configs/: policies.py  train.py
src/lerobot/data_processing/: __init__.py
src/lerobot/datasets/: video_utils.py
src/lerobot/policies/: __init__.py  camera_key_utils.py  factory.py  pretrained.py
src/lerobot/processor/: newline_task_processor.py
src/lerobot/rollout/: context.py
src/lerobot/scripts/: lerobot_inference.py  lerobot_push_dataset.py  lerobot_rollout.py  lerobot_train.py  lerobot_train_vla_lora.py
src/lerobot/utils/: feature_utils.py  import_utils.py
stl/mount/: Mount_USB_hub.stl  Mount_arduino.stl  Mount_battery_12v.stl  Mount_battery_16v.stl  Mount_driver.stl  Mount_jetson_thor.stl  Mount_microphone.stl  Mount_speaker.stl  Mount_wrist_camera.stl
stl/others/: Connectors.stl  Fence_left.stl  Fence_right.stl  Pillar.stl  Tower_camera.stl
stl/plate/: Plate_base_back_left.stl  Plate_base_back_right.stl  Plate_base_front_left.stl  Plate_base_front_right.stl  Plate_base_middle.stl  Plate_top.stl
tools/: bt_led_ros_node.py  depth_lidar_safety_guard.py  hri_base_stop_gate.py  person_arrival_event_bridge.py  read_so101_home_pose.py  so101_raw_home_pose_tools.py
tools/arduino_led/: arduino_led.ino
(+49 files in other folders)
