<?xml version="1.0"?>
<package format="3">
  <name>rf2o_laser_odometry</name>
  <version>1.0.0</version>
  <description>RF2O laser odometry for ROS 2.</description>
  <maintainer email="hansungai@example.com">hansungai</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <build_depend>eigen</build_depend>
  <build_depend>libboost-dev</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
