<?xml version="1.0"?>
<package format="3">
  <name>ydlidar_ros2_driver</name>
  <version>1.0.1</version>
  <description>YDLiDAR ROS 2 driver.</description>
  <maintainer email="support@ydlidar.com">YDLiDAR</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rmw</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>visualization_msgs</depend>
  <depend>ydlidar_sdk</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
