<?xml version="1.0"?>
<package format="3">
  <name>nb_voice_stt</name>
  <version>0.0.1</version>
  <description>SenseVoice STT, voice mode, and safety command bridge nodes for Ze-Ri.</description>
  <maintainer email="yjhanna3@hansung.ac.kr">NBYtics</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
