<?xml version="1.0"?>
<package format="3">
  <name>zeri_base</name>
  <version>0.0.1</version>
  <description>Serial mobile-base bridge and encoder odometry nodes for Ze-Ri.</description>
  <maintainer email="yjhanna3@hansung.ac.kr">NBYtics</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
