<?xml version="1.0"?>
<package format="3">
  <name>zeri_lidar</name>
  <version>0.0.1</version>
  <description>LiDAR front-scan filtering and LiDAR/depth safety guard nodes for Ze-Ri.</description>
  <maintainer email="yjhanna3@hansung.ac.kr">NBYtics</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
